Addresses HELIO-2750 Hyrax::FileSetPresenter no method 'rights'

--- a/app/views/hyrax/file_sets/_attribute_rows_permissions.html.erb
+++ b/app/views/hyrax/file_sets/_attribute_rows_permissions.html.erb
@@ -1,7 +1,7 @@
 <%# Reminder: follow the style and manually capitalize multi-word labels! %>
 <%= presenter.attribute_to_html(:embargo_release_date, label: t('embargo_release_date')) %>
 <%= presenter.attribute_to_html(:lease_expiration_date, label: t('lease_expiration_date')) %>
-<%= presenter.attribute_to_html(:rights) %>
+<%= presenter.attribute_to_html(:rights_statement) %>
 <%= presenter.attribute_to_html(:license, render_as: :license, label: t('license')) %>
 <%= presenter.attribute_to_html(:copyright_holder, render_as: :markdown, label: t('copyright_holder')) %>
 <%= presenter.attribute_to_html(:copyright_status, label: t('copyright_status')) %>
