Addresses HELIO-2662 Filter by Created/Action for the share_link_logs not working.

--- a/app/views/share_link_logs/index.html.erb
+++ b/app/views/share_link_logs/index.html.erb
@@ -21,7 +21,7 @@
             </tr>
             <tr>
               <td><button name="submit" type="submit" value="filter">Filter</button></td>
-              <td><input type="text" name="create_like" value="<%= params[:created_like] %>" size="<%= size %>" aria-label="created_like"></td>
+              <td><input type="text" name="created_like" value="<%= params[:created_like] %>" size="<%= size %>" aria-label="created_like"></td>
               <td><input type="text" name="ip_address_like" value="<%= params[:ip_address_like] %>" size="<%= size %>" aria-label="ip_address_like"></td>
               <td><input type="text" name="institution_like" value="<%= params[:institution_like] %>" size="<%= size %>" aria-label="institution_like"></td>
               <td><input type="text" name="press_like" value="<%= params[:press_like] %>" size="<%= size %>" aria-label="press_like"></td>
