--- a/app/views/webgls/_tab.html.erb
+++ b/app/views/webgls/_tab.html.erb
@@ -30,7 +30,7 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
 
   $(document).on('turbolinks:load', function() {
     // load the webgl if the webgl tab is already active
-    if ($('#webgl-tab').hasClass('active')) {
+    if ($('#webgl-tab').hasClass('active') || window.location.hash == '#webgl') {
 
       if (heliotropeIncompatibleWebGlUser === true) {
         $('#gameContainer').html('<div id="epub-webgl-mobile-message">Sorry, it looks like your device or browser is not compatible with WebGL.<br />Please check our <a href="https://hdl.handle.net/2027/fulcrum.9231782/about">compatibility requirements</a>.</div>');
