no turbolinks on links to static site

--- a/app/views/shared/_brand_fulcrum_footer_block.html.erb
+++ b/app/views/shared/_brand_fulcrum_footer_block.html.erb
@@ -6,9 +6,9 @@
     <li><a href="/blog/" data-turbolinks="false">Blog</a></li>
     <li><a href="mailto:fulcrum-info@umich.edu">Contact</a></li>
     <li><a href="https://github.com/mlibrary/heliotrope">Contribute</a></li>
-    <li><a href="/accessibility/">Accessibility</a></li>
-    <li><a href="/preservation/">Preservation</a></li>
-    <li><a href="/terms/">Terms of Service</a></li>
+    <li><a href="/accessibility/" data-turbolinks="false">Accessibility</a></li>
+    <li><a href="/preservation/" data-turbolinks="false">Preservation</a></li>
+    <li><a href="/terms/" data-turbolinks="false">Terms of Service</a></li>
     <li><% if current_user %> <%= link_to 'Log Out', main_app.destroy_user_session_path, class: 'log-out', 'data-turbolinks': 'false' %> <% else %> <%= link_to 'Log In', main_app.default_login_path, class: 'login', 'data-turbolinks': 'false' %> <% end %></li>
   </ul>
 </div>
