Addresses HELIO-1988 Fix display of filters when zooming only text.

--- a/app/assets/stylesheets/application/blacklight_facets.scss
+++ b/app/assets/stylesheets/application/blacklight_facets.scss
@@ -1,3 +1,5 @@
+// facet-pivot-count is no longer used (replaced by facet-count in HELIO-1988)
+// so this item may not do anything.
 .facet-values {
   .facet-pivot-count {
     display: table-cell;
