--- a/app/views/kaminari/blacklight/_prev_page.html.erb
+++ b/app/views/kaminari/blacklight/_prev_page.html.erb
@@ -9,7 +9,7 @@
 <% # HELIO-1989. May be removed when Blacklight changes are backported to Hyrax. -%>
 <% if current_page.first? %>
     <li class="disabled">
-      <%= link_to raw(t('views.pagination.previous')), '#', rel: 'prev', onclick: 'return false;', aria: { label: t('views.pagination.aria.go_to_previous_page') } %>
+      <%= link_to raw(t('views.pagination.previous')), '#', rel: 'prev', onclick: 'return false;', aria: { label: t('views.pagination.aria.go_to_previous_page'), disabled: true } %>
     </li>
 <% else %>
     <li>
