--- a/app/views/kaminari/blacklight/_next_page.html.erb
+++ b/app/views/kaminari/blacklight/_next_page.html.erb
@@ -9,7 +9,7 @@
 <% # HELIO-1989. May be removed when Blacklight changes are backported to Hyrax. -%>
 <% if current_page.last? %>
     <li class="disabled">
-      <%= link_to raw(t('views.pagination.next')), '#', rel: 'next', onclick: 'return false;', aria: { label: t('views.pagination.aria.go_to_next_page') } %>
+      <%= link_to raw(t('views.pagination.next')), '#', rel: 'next', onclick: 'return false;', aria: { label: t('views.pagination.aria.go_to_next_page'), disabled: true } %>
     </li>
 <% else %>
     <li>
