Resolves HELIO-2723: Run initial deposit into production APTrust

--- a/app/views/fulcrum/_logs.html.erb
+++ b/app/views/fulcrum/_logs.html.erb
@@ -19,4 +19,9 @@
     <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
+  <tr>
+    <td><%= link_to "APTrust Deposits", aptrust_deposits_path %></td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
 </table>
