--- a/app/views/fulcrum/_jobs.html.erb
+++ b/app/views/fulcrum/_jobs.html.erb
@@ -14,6 +14,13 @@
     </form>
   </li>
   <li>
+    <form name="deposit" method="get" action="<%= fulcrum_exec_path(:deposit) %>">
+      <label for="noid">Noid</label>
+      <input type="text" id="noid" name="noid" value="validnoid">
+      <button name="submit" type="submit" value="deposit">Deposit</button>
+    </form>
+  </li>
+  <li>
     <%= link_to(fulcrum_exec_path(:reindex_everything), method: :get, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
       <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Reindex Everything
     <% end %>
