--- a/app/views/aptrust_deposits/index.html.erb
+++ b/app/views/aptrust_deposits/index.html.erb
@@ -5,20 +5,22 @@
     <b>
       <div class="col-md-12"><hr/></div>
       <div class="col-md-10">
-        <% size = 24 %>
+        <% size = 12 %>
+        <div class="col-md-2"><div>NOID</div><div><input type="text" name="noid_like" value="<%= params[:noid_like] %>" size="<%= size %>" aria-label="noid_like"></div></div>
+        <div class="col-md-5"><div>Identifier</div><div><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size * 2 %>" aria-label="identifier_like"><button name="submit" type="submit" value="filter">Filter</button></div></div>
         <div class="col-md-3">Timestamp</div>
-        <div class="col-md-3"><div>NOID</div><div><input type="text" name="noid_like" value="<%= params[:noid_like] %>" size="<%= size %>" aria-label="noid_like"></div></div>
-        <div class="col-md-6"><div>Identifier</div><div><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div></div>
+        <div class="col-md-2">Verified</div>
       </div>
-      <div class="col-md-2"><div>&nbsp;</div><div><button name="submit" type="submit" value="filter">Filter</button></div></div>
+      <div class="col-md-2">&nbsp;</div>
       <div class="col-md-12"><hr/></div>
     </b>
   </form>
   <% @aptrust_deposits.each do |aptrust_deposit| %>
     <div class="col-md-10">
+      <div class="col-md-2"><%= aptrust_deposit.noid %></div>
+      <div class="col-md-5"><%= aptrust_deposit.identifier %></div>
       <div class="col-md-3"><%= aptrust_deposit.created_at %></div>
-      <div class="col-md-3"><%= aptrust_deposit.noid %></div>
-      <div class="col-md-6"><%= aptrust_deposit.identifier %></div>
+      <div class="col-md-2"><%= aptrust_deposit.verified %></div>
     </div>
     <div class="col-md-2">
       <%= link_to(aptrust_deposit_path(aptrust_deposit.id), method: :delete, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
