update with new team photos

--- a/fulcrum/_sass/custom.scss
+++ b/fulcrum/_sass/custom.scss
@@ -279,6 +279,7 @@ footer.page-footer {
     
       img {
         border-radius: 50%;
+        border: 1px solid #e5e5e5;
         max-width: 150px;
         height: auto;
       }
@@ -287,6 +288,7 @@ footer.page-footer {
         max-width: 150px;
         font-size: 150px;
         border-radius: 50%;
+        border: 1px solid #e5e5e5;
         color:  #FFF;
         background:  #BEC4CC;
       }
