--- a/app/views/layouts/hyrax.html.erb
+++ b/app/views/layouts/hyrax.html.erb
@@ -17,7 +17,7 @@
 
   <% if defined?(@press.subdomain) %>
     <%= render 'shared/brand_press_footer' %>
-  <% elsif defined?(@monograph_presenter.subdomain) %>
+  <% elsif defined?(@presenter.subdomain) %>
     <%= render 'shared/brand_press_footer' %>
   <% elsif defined?(@presenter.monograph.subdomain) %>
     <%= render 'shared/brand_press_footer' %>
