--- a/app/views/monograph_catalog/_custom_section_facet.html.erb
+++ b/app/views/monograph_catalog/_custom_section_facet.html.erb
@@ -1,6 +1,6 @@
 <ul class="facet-values list-unstyled">
   <% paginator = facet_paginator(facet_field, display_facet) %>
-  <%= render_facet_limit_list reorder_section_facet(@monograph_presenter, paginator), field_name %>
+  <%= render_facet_limit_list reorder_section_facet(@presenter, paginator), field_name %>
 
   <% unless paginator.last_page? || params[:action] == "facet" %>
     <li class="more_facets_link">
