--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -1,61 +1,61 @@
 <div id="maincontent" class="row monograph-info-epub">
-  <% if @monograph_presenter.monograph_coins_title? %>
+  <% if @presenter.monograph_coins_title? %>
       <!-- COinS for Zotero, etc -->
-      <span class="Z3988" title="<%= @monograph_presenter.monograph_coins_title %>"></span>
+      <span class="Z3988" title="<%= @presenter.monograph_coins_title %>"></span>
   <% end %>
   <div class="col-sm-3 monograph-cover">
-    <%= raw @monograph_presenter.monograph_thumbnail(225) %>
-    <% if can? :edit, @monograph_presenter %>
-      <a class="btn btn-default manage-monograph-button" href="<%= main_app.monograph_show_path(@monograph_presenter.id) %>" title="<%= t('monograph_catalog.index.show_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.show_page_button') %></a>
-      <a class="btn btn-default manage-monograph-button" href="<%= main_app.edit_hyrax_monograph_path(@monograph_presenter.id) %>" title="<%= t('monograph_catalog.index.edit_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.edit_page_button') %></a>
-      <p><%= @monograph_presenter.permission_badge %>
-      <%= @monograph_presenter.workflow.badge %></p>
+    <%= raw @presenter.monograph_thumbnail(225) %>
+    <% if can? :edit, @presenter %>
+      <a class="btn btn-default manage-monograph-button" href="<%= main_app.monograph_show_path(@presenter.id) %>" title="<%= t('monograph_catalog.index.show_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.show_page_button') %></a>
+      <a class="btn btn-default manage-monograph-button" href="<%= main_app.edit_hyrax_monograph_path(@presenter.id) %>" title="<%= t('monograph_catalog.index.edit_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.edit_page_button') %></a>
+      <p><%= @presenter.permission_badge %>
+      <%= @presenter.workflow.badge %></p>
     <% end %>
     <%= render 'shared/altmetric_dimensions' %>
-    <% if @monograph_presenter.peer_review? %>
-      <div><%= @monograph_presenter.peer_review.file.content.force_encoding("UTF-8").html_safe %></div>
+    <% if @presenter.peer_review? %>
+      <div><%= @presenter.peer_review.file.content.force_encoding("UTF-8").html_safe %></div>
     <% end %>
   </div><!-- /.monograph-cover -->
   <div class="col-sm-9 monograph-metadata">
-    <h1><%= @monograph_presenter.title %></h1>
-    <% if @monograph_presenter.authors? %>
-        <span class="authors"><%= render_markdown @monograph_presenter.authors %></span>
+    <h1><%= @presenter.title %></h1>
+    <% if @presenter.authors? %>
+        <span class="authors"><%= render_markdown @presenter.authors %></span>
     <% end %>
-    <% if @monograph_presenter.date_created? %>
-    <span aria-label="publication date" class="pubdate"><%= @monograph_presenter.date_created.first %></span>
+    <% if @presenter.date_created? %>
+    <span aria-label="publication date" class="pubdate"><%= @presenter.date_created.first %></span>
     <% end %>
-    <% if @monograph_presenter.license? %>
-      <span class="license"><a aria-label="license" rel="license" href="<%= @monograph_presenter.license.first %>" target="_blank"><%= @monograph_presenter.license_link_content %></a></span>
+    <% if @presenter.license? %>
+      <span class="license"><a aria-label="license" rel="license" href="<%= @presenter.license.first %>" target="_blank"><%= @presenter.license_link_content %></a></span>
     <% end %>
-    <% if @monograph_presenter.copyright_holder? %>
-       <% if @monograph_presenter.holding_contact? %>
-        <span aria-label="copyright information and contact" class="copyright">&copy; <a href="<%= @monograph_presenter.holding_contact %>"><%= @monograph_presenter.copyright_holder %></a></span>
+    <% if @presenter.copyright_holder? %>
+       <% if @presenter.holding_contact? %>
+        <span aria-label="copyright information and contact" class="copyright">&copy; <a href="<%= @presenter.holding_contact %>"><%= @presenter.copyright_holder %></a></span>
        <% else %>
-        <span aria-label="copyright information" class="copyright">&copy; <%= @monograph_presenter.copyright_holder %></span>
+        <span aria-label="copyright information" class="copyright">&copy; <%= @presenter.copyright_holder %></span>
        <% end %>
     <% end %>
-    <% if @monograph_presenter.funder? %>
-      <span aria-label="funder" class="funder"><i><%= @monograph_presenter.funder %></i></span>
+    <% if @presenter.funder? %>
+      <span aria-label="funder" class="funder"><i><%= @presenter.funder %></i></span>
     <% end %>
-    <% if @monograph_presenter.open_access? %>
+    <% if @presenter.open_access? %>
       <div class="open-access">
         <%= image_tag 'oa-lock-logo.png', alt: "Open Access icon", class: 'img-responsive' %>
         <span>OPEN ACCESS</span>
       </div>
     <% end %>
     <div class="description">
-      <%= render_markdown @monograph_presenter.description.first || '' %>
+      <%= render_markdown @presenter.description.first || '' %>
     </div>
-    <% if @monograph_presenter.buy_url? || @monograph_presenter.reader_ebook? %>
+    <% if @presenter.buy_url? || @presenter.reader_ebook? %>
     <!-- TODO: add check for allow download of EPUB or PDF to line 50 -->
         <div class="btn-toolbar" role="toolbar">
           <div class="btn-group btn-group-lg" role="group">
-            <% if @monograph_presenter.reader_ebook? %>
-                <a id="monograph-read-btn" href="<%= epub_path(@monograph_presenter.reader_ebook) %>" title="<%= t('monograph_catalog.index.read', title: @monograph_presenter.title) %>" aria-label="<%= t('monograph_catalog.index.read', title: @monograph_presenter.title) %>" class="btn btn-default" data-turbolinks="false"><%= t('monograph_catalog.index.read_book') %></a>
+            <% if @presenter.reader_ebook? %>
+                <a id="monograph-read-btn" href="<%= epub_path(@presenter.reader_ebook) %>" title="<%= t('monograph_catalog.index.read', title: @presenter.title) %>" aria-label="<%= t('monograph_catalog.index.read', title: @presenter.title) %>" class="btn btn-default" data-turbolinks="false"><%= t('monograph_catalog.index.read_book') %></a>
             <% end %>
             <% if @ebook_download_presenter.downloadable_ebooks? %>
                 <div class="btn-group btn-group-lg">
-                  <button type="button" id="monograph-download-btn" target="_blank" title="<%= t('monograph_catalog.index.download', title: @monograph_presenter.title) %>" aria-label="<%= t('monograph_catalog.index.download', title: @monograph_presenter.title) %>" aria-haspopus="true" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><%= t('monograph_catalog.index.download_book') %> <span class="caret"></span></button>
+                  <button type="button" id="monograph-download-btn" target="_blank" title="<%= t('monograph_catalog.index.download', title: @presenter.title) %>" aria-label="<%= t('monograph_catalog.index.download', title: @presenter.title) %>" aria-haspopus="true" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><%= t('monograph_catalog.index.download_book') %> <span class="caret"></span></button>
                   <ul class="dropdown-menu monograph-catalog-rep-downloads">
                   <% @ebook_download_presenter.ebook_presenters.each do |ebook| %>
                     <% if @ebook_download_presenter.downloadable?(ebook) %>
@@ -65,27 +65,27 @@
                   </ul>
                 </div>
             <% end %>
-            <% if @monograph_presenter.buy_url? %>
-              <a id="monograph-buy-btn" href="<%= @monograph_presenter.buy_url %>" target="_blank" title="<%= t('monograph_catalog.index.buy', title: @monograph_presenter.title) %>" aria-label="<%= t('monograph_catalog.index.buy', title: @monograph_presenter.title) %>" class="btn btn-default" data-turbolinks="false"><%= t('monograph_catalog.index.buy_book') %></a>
+            <% if @presenter.buy_url? %>
+              <a id="monograph-buy-btn" href="<%= @presenter.buy_url %>" target="_blank" title="<%= t('monograph_catalog.index.buy', title: @presenter.title) %>" aria-label="<%= t('monograph_catalog.index.buy', title: @presenter.title) %>" class="btn btn-default" data-turbolinks="false"><%= t('monograph_catalog.index.buy_book') %></a>
             <% end %>
           </div><!-- /.btn-group -->
         </div><!-- /.btn-toolbar -->
     <% end %>
-    <% if @monograph_presenter.webgl? %>
+    <% if @presenter.webgl? %>
       <div id="webgl-message"></div>
     <% end %>
 
   <div class="additional-metadata">
     <dl>
-      <%= @monograph_presenter.attribute_to_html(:series, html_dl: true) %>
-      <%= @monograph_presenter.attribute_to_html(:isbn, label: t('isbn'), html_dl: true) %>
-      <%= @monograph_presenter.attribute_to_html(:subject, html_dl: true, render_as: :catalog_facet_attribute,
-                                                 subdomain: @monograph_presenter.subdomain) %>
+      <%= @presenter.attribute_to_html(:series, html_dl: true) %>
+      <%= @presenter.attribute_to_html(:isbn, label: t('isbn'), html_dl: true) %>
+      <%= @presenter.attribute_to_html(:subject, html_dl: true, render_as: :catalog_facet_attribute,
+                                                 subdomain: @presenter.subdomain) %>
       <dt><%= t('citable_link') %></dt>
       <dd>
         <form>
           <label for="permalink" style="display: none;"><%= t('citable_link') %></label>
-          <input type="text" class="form-control" id="permalink" aria-label="citable link" value="<%= @monograph_presenter.citable_link %>" readonly="readonly" onclick="this.select(); document.execCommand('copy');" />
+          <input type="text" class="form-control" id="permalink" aria-label="citable link" value="<%= @presenter.citable_link %>" readonly="readonly" onclick="this.select(); document.execCommand('copy');" />
         </form>
       </dd>
     </dl>
@@ -97,35 +97,35 @@
 <div class="row monograph-assets-toc-epub">
   <div class="col-sm-12" id="tabs">
     <ul class="nav nav-tabs" role="tablist">
-      <% if @monograph_presenter.epub? %>
+      <% if @presenter.epub? %>
         <li role="presentation" class="active"><a id="tab-toc" href="#toc" data-toggle="tab" role="tab" aria-controls="toc" aria-selected="true" tabindex="0">Table of Contents</a></li>
       <% end %>
-      <% if @monograph_presenter.assets? %>
-        <% if @monograph_presenter.epub? %>
+      <% if @presenter.assets? %>
+        <% if @presenter.epub? %>
           <li role="presentation"><a id="tab-resources" href="#resources" role="tab" data-toggle="tab" aria-controls="resources" aria-selected="false" tabindex="-1">Resources</a></li>
         <% else %>
           <li role="presentation" class="active"><a id="tab-resources" href="#resources" data-toggle="tab" role="tab" aria-controls="resources" aria-selected="true"  tabindex="0">Resources</a></li>
         <% end %>
       <% end %>
-      <% if @monograph_presenter.reviews? %>
+      <% if @presenter.reviews? %>
         <li role="presentation"><a id="tab-reviews" href="#reviews" role="tab" data-toggle="tab" aria-controls="reviews" aria-selected="false" tabindex="-1">Reviews</a></li>
       <% end %>
-      <% if @monograph_presenter.related? %>
+      <% if @presenter.related? %>
         <li role="presentation"><a id="tab-related" href="#related" role="tab" data-toggle="tab" aria-controls="related" aria-selected="false" tabindex="-1">Related Titles</a></li>
       <% end %>
-      <% if @monograph_presenter.webgl? %>
+      <% if @presenter.webgl? %>
         <li role="presentation"><a id="tab-webgl" href="#webgl" role="tab" data-toggle="tab" aria-controls="webgl" aria-selected="false" tabindex="-1">3-D Model</a></li>
       <% end %>
-      <% if @monograph_presenter.database? %>
+      <% if @presenter.database? %>
         <li role="presentation"><a id="tab-database" href="#database" role="tab" data-toggle="tab" aria-controls="database" aria-selected="false" tabindex="-1">Database</a></li>
       <% end %>
-      <% if @monograph_presenter.aboutware? %>
+      <% if @presenter.aboutware? %>
         <li role="presentation"><a id="tab-aboutware" href="#aboutware" role="tab" data-toggle="tab" aria-controls="aboutware" aria-selected="false" tabindex="-1">About</a></li>
       <% end %>
       <li role="presentation"><a id="tab-stats" href="#stats" role="tab" data-toggle="tab" aria-controls="stats" aria-selected="false" tabindex="-1">Stats</a></li>
     </ul>
     <div id="tabs-content" class="tab-content monograph-assets-toc-epub-content" aria-live="polite">
-      <% if @monograph_presenter.epub? || @monograph_presenter.pdf_ebook? %>
+      <% if @presenter.epub? || @presenter.pdf_ebook? %>
         <section id="toc" class="tab-pane active fade in toc row" role="tabpanel" aria-hidden="false" aria-labelledby="tab-toc" tabindex="0">
           <div class="col-sm-12">
             <h2 class="sr-only">Table of Contents</h2>
@@ -133,8 +133,8 @@
           </div>
         </section>
       <% end %>
-      <% if @monograph_presenter.assets? %>
-        <% if @monograph_presenter.epub? %>
+      <% if @presenter.assets? %>
+        <% if @presenter.epub? %>
         <section id="resources" class="tab-pane fade in resources row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-resources" tabindex="0">
         <% else %>
         <section id="resources" class="tab-pane fade in active resources row" role="tabpanel" aria-hidden="false" aria-labelledby="tab-resources" tabindex="0">
@@ -150,7 +150,7 @@
           </div>
         </section>
       <% end %>
-      <% if @monograph_presenter.webgl? %>
+      <% if @presenter.webgl? %>
         <section id="webgl" class="tab-pane fade in webgl row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-webgl" tabindex="0">
           <div class="col-sm-12">
             <h2 class="sr-only">3D Model</h2>
@@ -158,38 +158,38 @@
           </div>
         </section>
       <% end %>
-      <% if @monograph_presenter.database? %>
+      <% if @presenter.database? %>
         <section id="database" class="tab-pane fade in database row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-database" tabindex="0">
           <div class="col-sm-12">
             <h2 class="sr-only">Database</h2>
-            <a href="<%= @monograph_presenter&.database&.external_resource_url %>" target="_blank">Click to open external database <span class="glyphicon glyphicon-share" aria-hidden="true" aria-label="Link to external database"></span></a>
+            <a href="<%= @presenter&.database&.external_resource_url %>" target="_blank">Click to open external database <span class="glyphicon glyphicon-share" aria-hidden="true" aria-label="Link to external database"></span></a>
           </div>
         </section>
       <% end %>
-      <% if @monograph_presenter.aboutware? %>
+      <% if @presenter.aboutware? %>
         <section id="aboutware" class="tab-pane fade in aboutware row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-aboutware" tabindex="0">
           <div class="col-sm-12">
             <h2 class="sr-only">About</h2>
             <%# this assumes that the "aboutware" FileSet is an html doc %>
-            <%= @monograph_presenter.aboutware.file.content.force_encoding("UTF-8").html_safe %>
+            <%= @presenter.aboutware.file.content.force_encoding("UTF-8").html_safe %>
           </div>
         </section>
       <% end %>
-      <% if @monograph_presenter.reviews? %>
+      <% if @presenter.reviews? %>
         <section id="reviews" class="tab-pane fade in reviews row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-reviews" tabindex="0">
           <div class="col-sm-12">
             <h2 class="sr-only">Reviews</h2>
             <%# this assumes that the "reviews" FileSet is an html doc %>
-            <%= auto_link(@monograph_presenter.reviews.file.content.force_encoding("UTF-8"), html: { target: '_blank' }, sanitize: false).html_safe %>
+            <%= auto_link(@presenter.reviews.file.content.force_encoding("UTF-8"), html: { target: '_blank' }, sanitize: false).html_safe %>
           </div>
         </section>
       <% end %>
-      <% if @monograph_presenter.related? %>
+      <% if @presenter.related? %>
         <section id="related" class="tab-pane fade in related row" role="tabpanel" aria-hidden="true" aria-labelledby="tab-related" tabindex="0">
           <div class="col-sm-12">
             <h2 class="sr-only">Related Titles</h2>
             <%# this assumes that the "related" FileSet is an html doc %>
-            <%= @monograph_presenter.related.file.content.force_encoding("UTF-8").html_safe %>
+            <%= @presenter.related.file.content.force_encoding("UTF-8").html_safe %>
           </div>
         </section>
       <% end %>
