--- a/app/views/shared/_altmetric_dimensions.html.erb
+++ b/app/views/shared/_altmetric_dimensions.html.erb
@@ -1,12 +1,12 @@
-<% if @monograph_presenter.present? %>
+<% if controller_name == "monograph_catalog" %>
 
   <div class="metrics">
-    <% if @monograph_presenter.isbn_noformat.present? %>
+    <% if @presenter.isbn_noformat.present? %>
     <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
-      <div data-badge-popover="right" data-badge-type="1" data-isbn="<%= @monograph_presenter.isbn_noformat.first %>" data-hide-no-mentions="true" class="altmetric-embed"></div>
+      <div data-badge-popover="right" data-badge-type="1" data-isbn="<%= @presenter.isbn_noformat.first %>" data-hide-no-mentions="true" class="altmetric-embed"></div>
     <% end %>
-    <% if @monograph_presenter.doi.present? %>
-        <span class="__dimensions_badge_embed__" data-doi="<%= @monograph_presenter.doi_path %>" data-hide-zero-citations="true" data-legend="hover-right" data-style="large_rectangle"></span><script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
+    <% if @presenter.doi.present? %>
+        <span class="__dimensions_badge_embed__" data-doi="<%= @presenter.doi_path %>" data-hide-zero-citations="true" data-legend="hover-right" data-style="large_rectangle"></span><script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
     <% end %>
   </div>
 
