stop Mozilla reader click event on #download

--- a/app/views/e_pubs/_cozy_controls_bottom.html.erb
+++ b/app/views/e_pubs/_cozy_controls_bottom.html.erb
@@ -56,7 +56,7 @@
         <% if @ebook_download_presenter.csb_download_links.length.positive? && @share_link.nil? %>
         cozy.control.download({
             region: 'top.toolbar.left',
-            template: '<button class="button--sm cozy-download" data-toggle="open" aria-label="Download book" role="button"><i id="download" class="oi" data-glyph="data-transfer-download" title="Download book" aria-hidden="true"></i></button>',
+            template: '<button class="button--sm cozy-download" data-toggle="open" aria-label="Download book" role="button"><i id="download-control-button" class="oi" data-glyph="data-transfer-download" title="Download book" aria-hidden="true"></i></button>',
         }).addTo(reader);
         <% end %>
 
