tidy PDF reader dependencies; add bootstrap/dropdown for share buttons

--- a/app/assets/stylesheets/mozilla-pdf-viewer.css
+++ b/app/assets/stylesheets/mozilla-pdf-viewer.css
@@ -3,5 +3,5 @@
  * require common
  *= require_tree ./application
  *= require cozy-sun-bear-main
- * require_tree ./mozilla-pdf-viewer
+ *= require_tree ./mozilla-pdf-viewer
 */
