--- a/app/views/layouts/mozilla-pdf-viewer.html.erb
+++ b/app/views/layouts/mozilla-pdf-viewer.html.erb
@@ -5,7 +5,7 @@
     <!-- CSS -->
     <%= stylesheet_link_tag 'mozilla-pdf-viewer' %>
     <!-- Javascript -->
-    <%#= javascript_include_tag 'mozilla-pdf-viewer' %>
+    <%= javascript_include_tag 'mozilla-pdf-viewer' %>
   </head>
   <body id="outerContainer">
     <%= content_for?(:body) ? yield(:body) : yield %>
