--- a/app/views/layouts/hyrax.html.erb
+++ b/app/views/layouts/hyrax.html.erb
@@ -19,7 +19,7 @@
     <%= render 'shared/brand_press_footer' %>
   <% elsif defined?(@presenter.subdomain) %>
     <%= render 'shared/brand_press_footer' %>
-  <% elsif defined?(@presenter.monograph.subdomain) %>
+  <% elsif defined?(@presenter.parent.subdomain) %>
     <%= render 'shared/brand_press_footer' %>
   <% else %>
     <%= render 'shared/footer' %>
