--- a/app/views/featured_representatives/_form.html.erb
+++ b/app/views/featured_representatives/_form.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="col-sm-4">
     <% if can? :edit, member.id %>
-      <%= link_to "Unset", main_app.featured_representatives_path(id: member.featured_representative.id, monograph_id: member.monograph.id),
+      <%= link_to "Unset", main_app.featured_representatives_path(id: member.featured_representative.id, monograph_id: member.parent.id),
           method: :delete, title: "Delete #{member.featured_representative.kind}",
           data: { confirm: "Unset Featured Representative?" },
           class: "btn btn-default" %>
@@ -14,14 +14,14 @@
 </div>
 <% else %>
   <% if can? :edit, member.id %>
-    <% if member.monograph.present? %>
+    <% if member.parent.present? %>
       <%= form_tag(main_app.featured_representatives_path, method: "post") do %>
         <div class="row">
           <div class="col-sm-8">
-            <%= select_tag(:kind, options_for_select(FeaturedRepresentative.kinds - member.monograph.featured_representatives.map(&:kind)), class: 'form-control') %>
+            <%= select_tag(:kind, options_for_select(FeaturedRepresentative.kinds - member.parent.featured_representatives.map(&:kind)), class: 'form-control') %>
 
             <%= hidden_field_tag(:file_set_id, member.id) %>
-            <%= hidden_field_tag(:monograph_id, member.monograph.id) %>
+            <%= hidden_field_tag(:monograph_id, member.parent.id) %>
           </div>
           <div class="col-sm-4">
             <%= submit_tag("Set", class: 'btn btn-default') %>
