--- a/app/views/webgls/_tab.html.erb
+++ b/app/views/webgls/_tab.html.erb
@@ -1,7 +1,7 @@
 <% content_for :head do %>
   <meta name="turbolinks-cache-control" content="no-cache">
 <% end
-webgl_id = @monograph_presenter.webgl_id
+webgl_id = @presenter.webgl_id
 webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 'webgl'))
 @unity_loader = "/webgl/#{webgl_id}/#{webgl.unity_loader}"
 @unity_json = "/webgl/#{webgl_id}/#{webgl.unity_json}"
